--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: subject do |f| %>
+<%= form_with model: @subject do |f| %>
   <div>
     <%= f.label :title %>
     <%= f.text_field :title %>
