--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -8,3 +8,21 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+// Mixins
+@use "mixins/media";
+
+// Configuration
+@use "config/variables";
+@use "config/reset";
+
+// Components
+@use "components/btn";
+@use "components/error_message";
+@use "components/form";
+@use "components/visually_hidden";
+@use "components/subject";
+
+// Layouts
+@use "layouts/container";
+@use "layouts/header";
