Add turbo progress bar and toggle completed

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -9,6 +9,8 @@
  * Consider organizing styles into separate files for maintainability.
  */
 
+@use "components/turbo_progress_bar";
+
 // Mixins
 @use "mixins/media";
 
