--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -5,5 +5,7 @@
     <h1>Edit subject</h1>
   </div>
 
-  <%= render "form", subject: @subject %>
+  <%= turbo_frame_tag @subject do %>
+    <%= render "form", subject: @subject %>
+  <% end %>
 </main>
