--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -5,7 +5,7 @@
     <h1>New subject</h1>
   </div>
 
-  <%= turbo_frame_tag "first_turbo_frame" do %>
+  <%= turbo_frame_tag @subject do %>
     <%= render "form", subject: @subject %>
   <% end %>
 </main>
